# dunder-mifflin

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements.txt
agents/darryl_coding_agent/: darryls_tech_warehouse.py
agents/darryl_coding_agent/tests/: test_darrylbot.py
agents/jimster/: big_tuna.py
agents/oscar/: README.md  agent_oscar.py
agents/oscar/tests/: test_oscar.py
agents/pam_bot/: agent_pam.py  pam_research_agent.py
agents/schrute_bot/: README.md  config.json  schrute_bot.py  setup.py
agents/schrute_bot/tests/: test_schrutebot.py
backend/: main.py
cli/: README.md  agent_connector.py  app.py  dunder_cli.py  textual_ui.css  textual_ui.py
cli/widgets/: agent_panel.py  code_response_box.py  command_box.py  interaction_log.py
common/: gemma_agent.py  gemma_classifier.py  gemma_model_downloader.py  mistral_agent.py  mistral_classifier.py  pdf_generator.py  web_scraper.py
common/utils/: grok_agent.py  qwen_model_downloader.py  web_scraper.py
core/: mistral_agent.py
docs/: agent-interaction.md  architecture.md  cli-ui.md  dunder-mifflin-restructuring.md  folder-structure.md  ideas.md  mcp-git.md  memory-constraints-llm.md  pam-mcp-hub.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BootScreen.tsx  ChatHeader.tsx  ChatWindow.tsx  MainInterface.tsx  Sidebar.tsx
tools/: due_diligence_tool.py
