[project]
name = "dunder-mifflin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.4.0",
    "google-api-python-client>=2.163.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "multi-agent-orchestrator>=0.1.9",
    "ollama>=0.4.7",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.49.0-Gemma-3" }
